commented out map stuff

--- a/public/position.css
+++ b/public/position.css
@@ -34,9 +34,10 @@ body {
     outline:0; /* gets rid of blue outline when clicked */
   }
 
+  /*
   #map {
     height: 100%;
-  }
+  }*/
 
   html, body {
     height: 100%;
