--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,18 @@
+#business-login {
+  font-family: Tahoma;
+  text-align: left;
+  display: inline;
+  padding: 50px;
+  padding-left: 20px;
+  font-size: 40px;
+  color: #398e8a;
+}
+
+#business-login:hover {
+  background: #575757;
+  color: #b2daff;
+}
+
 #banner-title, #banner-login {
     background: black;
     font-family: 'Caveat', Tahoma;
