used display property to make business-login button visibile plus added animation

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,7 @@
 #business-login {
   font-family: Tahoma;
-  text-align: left;
-  display: inline;
-  padding: 50px;
-  padding-left: 20px;
+  text-align: center;
+  padding: 40px;
   font-size: 40px;
   color: #398e8a;
 }
