having weird problems with returnedURL undefined after promise

--- a/public/position.css
+++ b/public/position.css
@@ -51,6 +51,7 @@ body {
   }
 
   #business-login {
-    display: none;
+    display: inline;
+    /*production>> display: none; */
     width: 35%;
   }
