--- a/public/position1.css
+++ b/public/position1.css
@@ -23,17 +23,18 @@ body {
 #banner {
   float: left;
   width: 100%;
-  background-color: white;
+  background: grey;
 }
 
 .top {
-  height: 135px;
+  height: 100px;
   float: left;
-  width: 25%;
+  width: 20%;
   font-size: 220%;
   border: 0px;
   outline: 0px;
-  font-size: 220%;
+  font-size: 150%;
+  background: rgb(233, 233, 233);
 }
 
 #banner-middle {
@@ -49,7 +50,7 @@ body {
 }
 
 #spacer {
-  width: 5%;
+  width: 10%;
 }
 
 
@@ -58,7 +59,8 @@ body {
 /* ######## "CONTENT" ######## */
 #content {
   background-color: white;
-  width: 100%
+  width: 100%;
+  padding-top: 100px;
 }
 
 /* Don't explicitly state height here -- it means the children can't express their own */
@@ -75,24 +77,34 @@ body {
 
 #market-description {
   display: block;
-  width: 30%;
-  padding-left: 15%;
+  width: 35%;
   height: 200px;
+  padding-left: 200px;
 }
 
 #market-title {
-  font-size: 50px;
-  vertical-align: sub;
+  font-size: 40px;
+  text-align: center;
+  display: block;
+  width: 60%;
 }
 
-#market-brief {
-  text-align: left;
+#brief-container {
+  padding: 20px;
+  width: 60%;
+  text-align: center;
   font-size: 18px;
+  display: block;
+}
+
+#brief-container {
+  text-align: left;
+  font-size: 15px;
 }
 
 #market-list {
   display: block;
-  padding-left: 12%;
+  padding-left: 0px;
 }
 
 .product-detail {
