--- a/public/position1.css
+++ b/public/position1.css
@@ -77,39 +77,32 @@ body {
 
 #market-description {
   display: block;
-  width: 35%;
+  width: 40%;
   height: 200px;
   padding-left: 200px;
 }
 
-#market-title {
-  font-size: 40px;
-  text-align: center;
-  display: block;
-  width: 60%;
-}
+      #market-title {
+        text-align: left;
+        font-size: 40px;
+        display: block;
+        width: 60%;
+      }
 
-#brief-container {
-  padding: 20px;
-  width: 60%;
-  text-align: center;
-  font-size: 18px;
-  display: block;
-}
-
-#brief-container {
-  text-align: left;
-  font-size: 15px;
-}
+      #brief-container {
+        text-align: left;
+        padding-top: 12px;
+        font-size: 15px;
+      }
 
 #market-list {
   display: block;
   padding-left: 0px;
 }
 
-.product-detail {
-  text-align: left;
-  display: inline;
-  font-size: 20px;
-  padding-right: 60px;
-}
+      .product-detail {
+        text-align: left;
+        display: inline;
+        font-size: 20px;
+        padding-right: 60px;
+      }
