--- a/public/position1.css
+++ b/public/position1.css
@@ -61,6 +61,8 @@ body {
   background-color: white;
   width: 100%;
   padding-top: 100px;
+  padding-left: 13%;
+  padding-right: 13%;
 }
 
 /* Don't explicitly state height here -- it means the children can't express their own */
@@ -77,16 +79,17 @@ body {
 
 #market-description {
   display: block;
-  width: 40%;
   height: 200px;
-  padding-left: 200px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
       #market-title {
         text-align: left;
-        font-size: 40px;
+        font-size: 45px;
         display: block;
         width: 60%;
+        padding-bottom: 10px;
       }
 
       #brief-container {
@@ -97,12 +100,25 @@ body {
 
 #market-list {
   display: block;
-  padding-left: 0px;
+  text-align: left;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
-      .product-detail {
+  .product {
+    text-align: left;
+  }
+      .product-detail, product-detail-last {
         text-align: left;
         display: inline;
+        font-size: 10px;
+      }
+
+      .product-detail {
+        padding-right: 100px;
+        width: 10px;
+      }
+
+      .product-detail-last {
         font-size: 20px;
-        padding-right: 60px;
       }
