more css cleanup. got rid of .belly class

--- a/public/position1.css
+++ b/public/position1.css
@@ -66,8 +66,8 @@ body {
 }
 
 /* Two belly components with width: 50%; will take up the full horiz space neatly */
-.belly {
-  float: left; /* :center => block behavior, :left => inline behavior with "Market" on left.*/
+#market-description, #market-list {
+  float: left;
 }
 
 #market-description {
