--- a/public/position1.css
+++ b/public/position1.css
@@ -59,50 +59,53 @@ body {
 /* ######## "CONTENT" ######## */
 #content {
   background-color: white;
-  width: 100%;
-  padding-top: 100px;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding: 100px 10% 0px 10%; /*trbl*/
 }
 
-/* Two belly components with width: 50%; will take up the full horiz space neatly */
-#market-description, #market-list {
-  float: left;
-}
+  #market-description, #market-list {
+    float: left; /* float: right stacks them on top of each other neatly /* Give these two components width: 50% and they will take up the full horiz space neatly */
+  }
 
-#market-description {
-  display: block;
-  padding-left: 0%;
-  padding-right: 16%;
-  padding-bottom: 40px;
-}
+  #market-description {
+    padding: 0px 16% 40px 0px;
+  }
 
       #market-title {
-        text-align: left;
         font-size: 45px;
-        display: block;
+        display: block; /* get rid of this and they end up side by side. Doesn't look bad. */
         padding-bottom: 20px;
+        text-align: left;
       }
 
-#market-list {
-  text-align: left;
-  padding-left: 0%;
-  font-size: 20px;
-}
+      #market-blurb {
+        font-size: 16px;
+        float: left;
+        text-align: left;
+      }
 
-  td {
-    text-align: left;
-    padding-right: 10px; /* >60 can push table to next line */
-    padding-bottom: 30px;
+  #market-list {
+    font-size: 20px;
   }
 
-  .product-detail-last {
-    padding-right: 0px;
-  }
+      td {
+        text-align: left;
+        padding: 0px 10px 30px /* >60 can push table to next line */ 0px;
+      }
+
+      .td-last {
+        padding-right: 0px;
+      }
+
+
+
 
   /* Notes
 
   1) Explicitly stating height or width can be dangerous, because it doesn't let elements dictate
   their own, appropriate height.
+
+  2) padding: top right bottom left
+
+  3) text-align and float don't act how I'd expect
 
   */
