hooked new css back up with userPersistance and anonLogin, with logout functionality as well

--- a/public/position1.css
+++ b/public/position1.css
@@ -42,6 +42,18 @@ body {
         width: 10%;
       }
 
+        #login {
+
+        }
+
+        #username {
+          visibility: hidden;
+        }
+
+        #are-you-biz {
+          visibility: hidden;
+        }
+
 
 
 
