--- a/public/position.css
+++ b/public/position.css
@@ -1,5 +1,6 @@
+/* ######## GENERAL ######## */
 * {
-  box-sizing: border-box;
+box-sizing: border-box;
   margin: 0px;
   padding: 0px;
   text-align: center;
@@ -12,50 +13,109 @@ body {
   height: 100%;
 }
 
-.top {
-  /*this controls the height of the banner*/
-  height: 135px;
-  float: left;
+
+
+/* ######## "BANNER" ######## */
+#banner { 
 }
 
-#banner-title {
-  width: 65%;
-  font-size: 300%;
-  text-align: left;
-  padding-left: 70px;
-  border: 0px; /* Get's rid of an ugly white default outline*/
-  outline:0; /* gets rid of blue outline when clicked */
+  .top {
+    height: 100px; /*controls height of banner */
+    float: left;
+  }
+
+      #banner-left {
+        text-align: left;
+        width: 20%;
+      }
+
+      #banner-middle {
+        width: 40%;
+        text-align: left;
+      }
+
+      #banner-right {
+        text-align: right;
+        width: 20%;
+      }
+
+      #banner-spacer {
+        width: 10%;
+      }
+
+        #login {
+
+        }
+
+        #username {
+          visibility: hidden;
+        }
+
+        #are-you-biz {
+          visibility: hidden;
+        }
+
+
+
+
+/* ######## "CONTENT" ######## */
+#content {
+  background-color: white;
+  padding: 100px 10% 0px 10%; /*trbl*/
 }
 
-#banner-login {
-  width: 35%;
-  font-size: 300%;
-  border: 0px; /* Get's rid of an ugly white default outline*/
-  outline:0; /* gets rid of blue outline when clicked */
-}
+  #market-description, #market-list {
+    float: left; /* float: right stacks them on top of each other neatly /* Give these two components width: 50% and they will take up the full horiz space neatly */
+  }
 
-/*
-#map {
-  height: 100%;
-}*/
+  #market-description {
+    padding: 0px 16% 40px 0px;
+  }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+      #market-title {
+        display: block; /* get rid of this and they end up side by side. Doesn't look bad. */
+        padding-bottom: 20px;
+        text-align: left;
+      }
 
-/*this hides the input that ends up getting used with JS */
-#uploadInput {
-  display: none;
-}
+      #market-blurb {
+        float: left;
+        text-align: left;
+      }
 
-#business-login {
-  display: inline;
-  /*production>> display: none; */
-}
+  #market-list {
+    font-size: 20px;
+    font-weight: 300;
+  }
 
-#business-logout {
-  display: none;
-  /*production>> display: none; */
-}
+      td {
+        text-align: left;
+        padding: 0px 20px 45px 0px; /* top right bottom left */
+      }
+
+      .td-first {
+        font-weight: 500;
+        padding-right: 60px;
+      }
+
+      .td-money {
+        text-align: right;
+      }
+
+      .td-last {
+        padding-right: 0px;
+      }
+
+
+
+
+  /* Notes
+
+  1) Explicitly stating height or width can be dangerous, because it doesn't let elements dictate
+  their own, appropriate height.
+
+  2) padding: top right bottom left
+
+  3) text-align and float don't act how I'd expect
+
+  */
