got rid of the formatting for a link for the back button on the biz.html page

--- a/public/css/biz_style.css
+++ b/public/css/biz_style.css
@@ -20,6 +20,11 @@
         outline: 0px; /* because these are buttons, this gets rid of the default outline */
     }
 
+    #back-button {
+      text-decoration: none; /* gets rid of link formatting */
+      color: #bd9e62;
+    }
+
 
 
 /* ######## "CONTENT" ######## */
