added the populateMarket() function which references a field called status that doesn't yet exist

--- a/public/css/position.css
+++ b/public/css/position.css
@@ -73,6 +73,7 @@ body {
   }
 
       #market-title {
+        font-style: 500;
         font-size: 40px;
         display: block; /* get rid of this and they end up side by side. Doesn't look bad. */
         padding-bottom: 20px;
