when stripeBizId loads, product and price inputs become visible in biz.html

--- a/public/css/biz_position.css
+++ b/public/css/biz_position.css
@@ -89,13 +89,8 @@ body {
       td {
         text-align: left;
         padding: 0px 40px 45px 0px; /* top right bottom left */
+        visibility: hidden;
       }
-
-      /*
-      .td-first {
-        font-weight: 500;
-        padding-right: 60px;
-      }*/
 
       .td-money {
         text-align: right;
