adding a business name is now an option

--- a/public/css/biz_style.css
+++ b/public/css/biz_style.css
@@ -46,7 +46,8 @@
         font-size: 20px;
         }
 
-    #td-product, #td-money, #product-save {
+    #td-product, #td-money, #product-save,
+    #td-name, #name-save {
       padding: 5px;
       background-color: #f2e9d5;
       border: 0px;
