added a payment success message, spinner handling for payment form and some other UI stuff for payment form

--- a/public/css/position.css
+++ b/public/css/position.css
@@ -64,7 +64,7 @@ body {
   padding: 100px 10% 0px 10%; /*trbl*/
 }
 
-  #paying-now {
+  #paying-now, #payment-success {
     visibility: hidden;
   }
 
