the card form is now added into the dom when the buy button is clicked so that it can be canceled and reconstructed as needed

--- a/public/css/position.css
+++ b/public/css/position.css
@@ -64,7 +64,7 @@ body {
   padding: 100px 10% 0px 10%; /*trbl*/
 }
 
-  #paying-now, #payment-success {
+  #paying-now, #payment-success, #reset-payform {
     visibility: hidden;
   }
 
