cancel button changes to a more appropriate innerHTML when payment is successful

--- a/public/css/position.css
+++ b/public/css/position.css
@@ -66,6 +66,7 @@ body {
 
   #paying-now, #payment-success, #reset-payform {
     visibility: hidden;
+    padding: 4px;
   }
 
   #loading-market {
