--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,10 @@
     color: #4d3a16;
   }
 
+    #loading-market {
+      color: #bd9e62;
+    }
+
     #market-title {
         color: #8b5b00;
         font-size: 45px;
@@ -41,63 +45,6 @@
         font-size: 20px;
         }
 
-
-
-
-
-/* Previous css file before refactor */
-/*#business-login {
-    font-family: Tahoma;
-    text-align: center;
-    padding: 40px;
-    font-size: 40px;
-    color: #398e8a;
-  }
-  
-  #business-login:hover {
-    background: #575757;
-    color: #b2daff;
-  }
-  
-  #banner-title, #banner-login {
-      background: black;
-      font-family: 'Caveat', Tahoma;
+    .product-detail-last {
+      background-color: #f2e9d5;
     }
-  
-    #banner-title {
-      color: #398e8a;
-    }
-  
-    #banner-login {
-      color: #ff6655;
-    }
-  
-    #banner-title:hover {
-      background: #575757;
-      color: #fcd161;
-    }
-    
-    #banner-login:hover {
-      background: #575757;
-      color: #b2daff;
-    }
-    
-    #banner-title:active {
-      color: #575757;
-    }
-    
-    #banner-login:active {
-      font-size: 300%;
-    }
-  
-    
-    #data-item {
-      background: #ff90a5;
-      padding-top: 2%;
-    }
-  
-    #theList {
-      padding-bottom: 2%;
-      background: #ff90a5;
-    }
-    */
