added the gitbuh folded corner

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@
     #market-title {
         color: #8b5b00;
         font-size: 45px;
+        font-family: 'Berkshire Swash', cursive;
     }
 
     #market-blurb {
