--- a/public/css/position.css
+++ b/public/css/position.css
@@ -87,6 +87,34 @@ body {
     float: left; /* float: right stacks them on top of each other neatly /* Give these two components width: 50% and they will take up the full horiz space neatly */
   }
 
+  #product-table {
+  }
+
+  #market-list {
+    width: 70%;
+  }
+
+  #intro-text-wrapper {
+    text-align: left;
+    padding-bottom: 50px;
+    padding-right: 200px;
+  }
+
+  .intro-links {
+    text-decoration: none;
+    color: #906a88;
+    font-weight: 500;
+    
+  }
+
+  #intro-text {
+    /* padding: 0px 10px 30px 10px; */
+    font-size: 14px;
+    width: 100%;
+    margin: 0px auto;
+    text-decoration: none;
+  }
+  
   #market-description {
     padding: 0px 12% 40px 0px;
   }
