--- a/public/css/position.css
+++ b/public/css/position.css
@@ -102,8 +102,8 @@ body {
 
   .intro-links {
     text-decoration: none;
-    color: #906a88;
-    font-weight: 500;
+    color: #4e3b4a;
+    font-weight: 700;
     
   }
 
