--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,7 @@
         color: #8b5b00; 
         font-size: 20px;
         font-family: 'Berkshire Swash', cursive;
+        padding-left: 6px;
     }
 
     #market-title {
